[package]
name = "cal-sync"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
argh = "0.1"
xshell = "0.2"
walkdir = "2"
rayon = "1"
color-eyre = "0.6"

jiff = "0.1"
chrono = "0.4"

orgize = "0.10.0-alpha.10"

axum = "0.8"
google-calendar = { git = "https://github.com/oxidecomputer/third-party-api-clients.git" }
tokio = { version = "1", features = ["full"] }
open = "5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = "1"
serde_json = "1"
